--- a/Absenteeism Exercise - Preprocessing.ipynb
+++ b/Absenteeism Exercise - Preprocessing.ipynb
@@ -586,12 +586,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For Better Comparison\n",
-    "# pd.options.display.max_columns = None\n",
-    "# pd.options.display.max_rows = None\n",
-    "\n",
     "pd.options.display.max_columns = None\n",
-    "pd.options.display.max_rows = 50"
+    "pd.options.display.max_rows = None"
    ]
   },
   {
